--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "repository": "https://github.com/OceanRonquilloMorgan/oceanronquillomorgan.github.io.git",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-imagemin": "^2.0.1",
     "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-uglify": "^4.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-sass": "^3.0.1",
     "node-sass": "^4.9.2"
